--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "yarn compile && yarn next build",
     "clean": "rm -rf build-tsc .next",
     "compile": "yarn run -T tsc --build --verbose",
-    "dev": "yarn compile && yarn next dev",
+    "dev": "yarn compile && yarn next dev -p 323",
     "lint": "yarn run -T prettier --write './src/**/*.{js,jsx,json,ts,tsx}' && eslint './src/**/*.{js,jsx,ts,tsx}' --fix --max-warnings=0",
     "start": "yarn next start",
     "sitemap": "yarn next-sitemap"
