--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "build": "yarn compile && yarn next build",
     "clean": "rm -rf build-tsc .next",
     "compile": "yarn run -T tsc --build --verbose",
-    "dev": "yarn compile && yarn next dev -p 323",
+    "dev": "yarn compile && yarn next dev -p 443",
     "lint": "yarn run -T prettier --write './src/**/*.{js,jsx,json,ts,tsx}' && eslint './src/**/*.{js,jsx,ts,tsx}' --fix --max-warnings=0",
-    "start": "yarn next start",
+    "start": "yarn next start -p 443",
     "sitemap": "yarn next-sitemap"
   },
   "dependencies": {
